# k1core_task

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  static.sh
app/: admin.py  exceptions.py  tasks.py
app/dal/: auth.py  blocks.py
app/fixtures/: currencies_providers.json
app/migrations/: 0001_initial.py
app/models/: __init__.py  blocks.py  user.py
app/routers/: __init__.py  auth.py  blocks.py
app/schemas/: __init__.py  auth.py  blocks.py
app/utils/: auth.py  jwt.py
core/: asgi.py  celery.py  settings.py
